Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.2, 5.12.1
-
macOS 10.12, and Ubuntu Linux 16.04 desktop
-
-
b1fdcc8c0fefe0660302494618032342b623e199 (qt/qtbase/dev) 1937ceb261af39cf33016741c0860ed7ac85787a (qt/qtbase/6.2) 8f3dca45556f536be36e943b6f1f0e65ef9eb93b (qt/qtbase/6.1)
Description
When starting a drag scroll via QScroller in a listview there will be a slight jump right before the scrolling starts.
In the example, to reproduce this scroll with the mouse wheel a bit first. Press on an item and then start to move the mouse upwards, eventually you will see the jump occur.
Attachments
Issue Links
- relates to
-
QTBUG-71367 When scroller using a single finger with QScroller it can sometimes get stuck and not bounce back
- Closed